--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,4 @@
-
-PROJECT_NAME="user mgmt api"
-# Postgres (recommended)
-SQLALCHEMY_DATABASE_URI="postgresql+asyncpg://postgres:postgres@localhost:5432/fastapi_async"
-
-# Or: SQLite (for local/dev only)
-# SQLALCHEMY_DATABASE_URI="sqlite+aiosqlite:///./dev.db"
+# Environment configuration
+DATABASE_URL=postgresql+psycopg2://dell:`dell123@db:5432/user_db
+JWT_SECRET=change-me-in-prod
+ACCESS_TOKEN_EXPIRES_MIN=60
